docs/0.20.1/_sources/user-guide/model-gallery/temporal/plot_template_temporal.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "user-guide/model-gallery/temporal/plot_template_temporal.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_user-guide_model-gallery_temporal_plot_template_temporal.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_user-guide_model-gallery_temporal_plot_template_temporal.py:


.. _LightCurve-temporal-model:

Light curve temporal model
==========================

This model parametrises a lightCurve time model.

.. GENERATED FROM PYTHON SOURCE LINES 11-26

.. code-block:: default



    from astropy.time import Time
    from gammapy.modeling.models import (
        LightCurveTemplateTemporalModel,
        Models,
        PowerLawSpectralModel,
        SkyModel,
    )

    time_range = [Time("59100", format="mjd"), Time("59365", format="mjd")]
    path = "$GAMMAPY_DATA/tests/models/light_curve/lightcrv_PKSB1222+216.fits"
    light_curve_model = LightCurveTemplateTemporalModel.read(path)
    light_curve_model.plot(time_range)




.. image-sg:: /user-guide/model-gallery/temporal/images/sphx_glr_plot_template_temporal_001.png
   :alt: plot template temporal
   :srcset: /user-guide/model-gallery/temporal/images/sphx_glr_plot_template_temporal_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 27-30

YAML representation
-------------------
Here is an example YAML file using the model:

.. GENERATED FROM PYTHON SOURCE LINES 30-39

.. code-block:: default


    model = SkyModel(
        spectral_model=PowerLawSpectralModel(),
        temporal_model=light_curve_model,
        name="light_curve_model",
    )
    models = Models([model])

    print(models.to_yaml())




.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    components:
    -   name: light_curve_model
        type: SkyModel
        spectral:
            type: PowerLawSpectralModel
            parameters:
            -   name: index
                value: 2.0
            -   name: amplitude
                value: 1.0e-12
                unit: cm-2 s-1 TeV-1
            -   name: reference
                value: 1.0
                unit: TeV
                frozen: true
        temporal:
            type: LightCurveTemplateTemporalModel
            filename: /Users/terrier/Code/gammapy-dev/gammapy-data/tests/models/light_curve/lightcrv_PKSB1222+216.fits






.. _sphx_glr_download_user-guide_model-gallery_temporal_plot_template_temporal.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: plot_template_temporal.py <plot_template_temporal.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: plot_template_temporal.ipynb <plot_template_temporal.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
